--- a/src/utils/_normalize.scss
+++ b/src/utils/_normalize.scss
@@ -31,3 +31,8 @@ a:hover{text-decoration: none;}
 ul li{list-style: none;}
 img{vertical-align: top;}
 h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
+
+.container {
+	max-width: 916px;
+	margin: 0 auto;
+}
