--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -11,18 +11,28 @@
       h1 {
         font-size: 40.8px;
         font-weight: bold;
+        font-family: 'Montserrat', sans-serif;
       }
   }
   &__contacts {
     display: flex;
     gap:31px;
     &_item {
-
+      p {
+        font-size: 16px;
+        margin-bottom: 10px;
+        font-family: 'Raleway', sans-serif;
+      }
     }
   }
 
   &__sources {
-
+    display: flex;
+    justify-content: center;
+    gap:16px;
+    img {
+      cursor: pointer;
+    }
   }
 
   &__bottom {
@@ -31,6 +41,10 @@
         justify-content: center;
         gap:20px;
         color: #8D8D8E;
+        li {
+          font-family: 'Raleway', sans-serif;
+        }
       }
   }
+
 }
