--- a/src/utils/_normalize.scss
+++ b/src/utils/_normalize.scss
@@ -33,6 +33,8 @@ img{vertical-align: top;}
 h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
 
 .container {
-	max-width: 916px;
+	max-width: 896px;
 	margin: 0 auto;
+	padding-left: 20px;
+	padding-right: 20px;
 }
