--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -1,27 +1,49 @@
-@import "src/utils/variables";
+@import "../../utils/variables";
 
-footer {
+.footer {
   background: #F8F8F8;
   padding: 32px 50px 35px 50px;
-  .header-footer {
+
+  &__header {
     display: flex;
     justify-content: space-between;
     color: $text-color;
     h1 {
       font-size: 40.8px;
+      font-weight: bold;
+      font-family: 'Montserrat', sans-serif;
     }
-    .our__contacts {
-      display: flex;
-      gap:31px;
+  }
+  &__contacts {
+    display: flex;
+    gap:31px;
+    &_item {
+      p {
+        font-size: 16px;
+        margin-bottom: 10px;
+        font-family: 'Raleway', sans-serif;
+      }
     }
   }
 
-  .bottom-footer {
+  &__sources {
+    display: flex;
+    justify-content: center;
+    gap:16px;
+    img {
+      cursor: pointer;
+    }
+  }
+
+  &__bottom {
     ul {
       display: flex;
       justify-content: center;
       gap:20px;
       color: #8D8D8E;
+      li {
+        font-family: 'Raleway', sans-serif;
+      }
     }
   }
 
