--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -1,6 +1,7 @@
 
 .header{
-  padding: 0 20px;
+  padding: 20px 0;
+  grid-area: header;
   h1{
     font-size: 37px;
     font-weight: bold;
@@ -17,7 +18,6 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 20px 0;
 
     & > *:not(:last-child){
       margin-right: 20px;
@@ -63,10 +63,9 @@
       color: #2967FF;
       font-size: 14px;
       border-radius: 50%;
-      transform: translate(-50%);
-      right: -50%;
-      padding: 5px 0;
-
+      transform: translate(-100%, -30%);
+      right: -100%;
+      padding: 5px 5px;
     }
   }
   &__avatar{
