--- a/src/utils/_normalize.scss
+++ b/src/utils/_normalize.scss
@@ -2,7 +2,7 @@
 	padding: 0;
 	margin: 0;
 	border: 0;
-	font-family: 'Nunito', sans-serif;
+	font-family: 'Raleway', sans-serif;
 }
 *,*:before,*:after{
 	-moz-box-sizing: border-box;
@@ -30,11 +30,12 @@ a, a:visited{text-decoration: none;}
 a:hover{text-decoration: none;}
 ul li{list-style: none;}
 img{vertical-align: top;}
-h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
+h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;font-family: 'Montserrat', sans-serif;}
+h3{
+	font-family: 'Raleway', sans-serif;
+}
 
 .container {
-	max-width: 896px;
-	margin: 0 auto;
-	padding-left: 20px;
-	padding-right: 20px;
+	padding-left: 50px;
+	padding-right: 50px;
 }
