--- a/src/components/Aside/aside.scss
+++ b/src/components/Aside/aside.scss
@@ -4,22 +4,26 @@
     display: flex;
     flex-direction: column;
     gap:20px;
-    &_item {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      border:1px solid black;
-      width: 311px;
-      height: 143px;
-      border-radius: 20px;
-      h3 {
-        line-height: 23px;
-        width: min-content;
-        text-align: center;
-        font-family: 'Raleway', serif;
-        font-size: 20px;
-        font-weight: bold;
-      }
+  }
+
+  &__item {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border:1px solid black;
+    color:#FFFFFF;
+    user-select: none;
+    cursor: pointer;
+    width: 311px;
+    height: 143px;
+    border-radius: 20px;
+    h3 {
+      line-height: 23px;
+      width: min-content;
+      text-align: center;
+      font-family: 'Raleway', serif;
+      font-size: 20px;
+      font-weight: bold;
     }
   }
 
