--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -1,3 +1,5 @@
 @import './Header/header.scss';
 @import "./Footer/footer.scss";
 @import "./Aside/aside.scss";
+@import "./Basket/basket.scss";
+@import "./Button/button.scss";
