basket-many-components

--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -3,3 +3,4 @@
 @import "./Aside/aside.scss";
 @import "./Basket/basket.scss";
 @import "./Button/button.scss";
+@import "./Button/CounterButton/counter_button.scss";
