--- a/src/components/Basket/basket.scss
+++ b/src/components/Basket/basket.scss
@@ -2,16 +2,34 @@
   //fixme margin
   margin-left: 60px;
   border-radius: 20px;
-  width: 916px;
   border: 1px solid #AEC2EA;
   &__header {
-    height: 100px;
-    border: 1px solid #AEC2EA;
+    display: grid;
+    grid-template-columns: 0.5fr 1fr 1fr 0.5fr;
+    align-items: center;
+    justify-items: flex-end;
+    border-bottom: 1px solid #AEC2EA;
+    border-radius: 20px;
+    p b {
+      display: block;
+      font-size: 20px;
+    }
+    button {
+      width: 80%;
+    }
+    img {
+      margin: 0 14.5px 0 55px;
+    }
   }
   &__list {
-
+    padding: 40px 56px;
   }
   &__item {
-
+    display: grid;
+    align-items: center;
+    justify-content: center;
+    grid-template-columns: 0.5fr 4fr 2fr 3fr 0.1fr;
+    border-bottom: 1px solid #AEC2EA;
+    padding-bottom: 22px;
   }
 }
