--- a/src/components/Aside/aside.scss
+++ b/src/components/Aside/aside.scss
@@ -1,6 +1,8 @@
 .aside {
   grid-area: aside;
-  padding: 20px 20px 20px 0px;
+  padding: 20px 20px 20px 20px;
+  border-left: 1px solid #F0F4FB;
+
   &__list {
     display: flex;
     flex-direction: column;
