--- a/src/components/Main/main.scss
+++ b/src/components/Main/main.scss
@@ -1,7 +1,9 @@
+//Main
 .main {
 
 }
 
+// Header
 .main__header {
   padding-bottom: 20px;
 
@@ -14,6 +16,7 @@
     & > span{
       font-size: 12px;
       color: #2967FF;
+      cursor: pointer;
     }
   }
   &__bottom{
@@ -26,9 +29,11 @@
     border-radius: 40px;
     padding: 2px 10px;
     color: white;
+    cursor: pointer;
   }
 }
 
+//Content
 .main__content {
 
 }
