--- a/src/utils/_variables.scss
+++ b/src/utils/_variables.scss
@@ -1,2 +1,12 @@
 // Colors
 $text-color: #2D2D2F;
+$blue-grey: #727280;
+$grey: #8D8D8E;
+$blue: #2967FF;
+$very-light-blue: #F0F4FB;
+$pink: #FF2D87;
+$orange: #FFA601;
+$light-pink: #FF7CB4;
+$green: #58CF18;
+$light-grey: #F8F8F8;
+$menu-blue: #AEC2EA;
