--- a/src/components/Aside/aside.scss
+++ b/src/components/Aside/aside.scss
@@ -1,7 +1,9 @@
+@import "../../utils/variables";
+
 .aside {
   grid-area: aside;
   padding: 20px 20px 20px 20px;
-  border-left: 1px solid #F0F4FB;
+  border-left: 1px solid $very-light-blue;
 
   &__list {
     display: flex;
@@ -18,7 +20,7 @@
     display: flex;
     width: 311px;
     height: 143px;
-    border: 1px solid #FF2D87;
+    border: 1px solid $pink;
     align-items: center;
     justify-content: center;
     &__left {
@@ -31,7 +33,7 @@
       p {
         font-size: 20px;
         font-weight: 600;
-        color: #2967FF;
+        color: $blue;
         margin-bottom: 10px;
       }
     }
@@ -42,7 +44,7 @@
     align-items: center;
     justify-content: center;
     border:1px solid black;
-    color:#FFFFFF;
+    color: #FFFFFF;
     user-select: none;
     cursor: pointer;
     width: 311px;
