--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -2,7 +2,7 @@
 
 .footer {
   grid-area: footer;
-  background: #F8F8F8;
+  background: $light-grey;
   padding: 32px 0;
   &__header {
     display: flex;
@@ -40,7 +40,7 @@
       display: flex;
       justify-content: center;
       gap:20px;
-      color: #8D8D8E;
+      color: $grey;
       li {
         font-family: 'Raleway', sans-serif;
       }
