--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -1,3 +1,4 @@
+@import '../../utils/variables';
 
 .header{
   padding: 20px 0;
@@ -9,7 +10,7 @@
   }
 
   span{
-    color: #727280;
+    color: $blue-grey;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -32,7 +33,7 @@
   }
   &__search{
     width: 80%;
-    border: 1px solid #F0F4FB;
+    border: 1px solid $very-light-blue;
     border-radius: 36px;
     display: flex;
     justify-content: space-between;
@@ -44,7 +45,7 @@
       width: 100%;
     }
     &_button{
-      background-color: #F0F4FB;
+      background-color: $very-light-blue;
       padding: 0 24px;
       margin: 3px 5px 3px 0;
       border-radius: 36px;
@@ -56,7 +57,7 @@
     position: relative;
     min-width: 44px;
     min-height: 44px;
-    border: 1px solid #a1a1a1;
+    border: 1px solid $blue-grey;
     border-radius: 50%;
     
     &_icon{
@@ -69,7 +70,7 @@
       z-index: 2;
       position: absolute;
       background-color: white;
-      color: #2967FF;
+      color: $blue;
       font-size: 14px;
       border-radius: 50%;
       transform: translate(-100%, -30%);
