--- a/src/components/Main/main.scss
+++ b/src/components/Main/main.scss
@@ -1,39 +1,41 @@
 //Main
 .main {
+  margin-bottom: 20px;
+  // Header
+  &__header {
+    padding-bottom: 20px;
 
-}
+    &__top{
+      margin-bottom: 20px;
+      display: flex;
+      align-items: center;
+      gap: 30px;
 
-// Header
-.main__header {
-  padding-bottom: 20px;
+      & > span{
+        font-size: 12px;
+        color: #2967FF;
+        cursor: pointer;
+      }
+    }
+    &__bottom{
 
-  &__top{
-    margin-bottom: 20px;
-    display: flex;
-    align-items: center;
-    gap: 30px;
-
-    & > span{
-      font-size: 12px;
-      color: #2967FF;
+    }
+    &__category{
+      margin-right: 6px;
+      background-color: #4949ec;
+      border: 1px solid #4949ec;
+      border-radius: 40px;
+      padding: 2px 10px;
+      color: white;
       cursor: pointer;
     }
   }
-  &__bottom{
 
-  }
-  &__category{
-    margin-right: 6px;
-    background-color: #4949ec;
-    border: 1px solid #4949ec;
-    border-radius: 40px;
-    padding: 2px 10px;
-    color: white;
-    cursor: pointer;
+  //Content
+  &__content {
+
   }
 }
 
-//Content
-.main__content {
 
-}
+
