--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -6,3 +6,4 @@
 @import "./Button/button.scss";
 @import "./Goods/goods.scss";
 @import "./Button/CounterButton/counter_button.scss";
+@import "./Input/input.scss";
