--- a/src/components/Button/button.scss
+++ b/src/components/Button/button.scss
@@ -7,12 +7,24 @@
   font-size: 16px;
   font-weight: 600;
   background: $blue;
-  &:hover {
-    transition: background-color 3s cubic-bezier(0.1, 0.8, 0.5, 2);
-    background: #073193;
+
+  //&:hover {
+  //  transition: background-color 3s cubic-bezier(0.1, 0.8, 0.5, 2);
+  //  background: #073193;
+  //}
+  &__img{
+    width: 16px;
+    height: 16px;
   }
 
-  // Modifiers
+  &__items{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 6px;
+  }
+
+  // Themes
   &_white{
     background-color: white;
     border: 1px solid $blue;
@@ -26,5 +38,10 @@
   &_w100{
     width: 100%;
   }
-  //
+
+  &_light-blue{
+    background-color: $very-light-blue;
+    color: $blue-grey;
+  }
+
 }
