--- a/src/components/Goods/goods.scss
+++ b/src/components/Goods/goods.scss
@@ -1,9 +1,16 @@
 @import '../../utils/variables';
 
 .goods{
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  gap: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 46px;
+
+  &__wrapper{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 20px;
+  }
 
   &__item{
   }
