--- a/src/components/Main/main.scss
+++ b/src/components/Main/main.scss
@@ -1,6 +1,9 @@
+@import '../../utils/variables';
+
 //Main
 .main {
-  margin-bottom: 20px;
+  margin-bottom: 55px;
+
   // Header
   &__header {
     padding-bottom: 20px;
@@ -13,22 +16,32 @@
 
       & > span{
         font-size: 12px;
-        color: #2967FF;
+        font-weight: 600;
+        color: $blue;
         cursor: pointer;
       }
     }
-    &__bottom{
 
+    &__bottom{
+      & > *:not(:last-child){
+        margin-bottom: 10px;
+      }
     }
+
+
     &__category{
       margin-right: 6px;
-      background-color: #4949ec;
-      border: 1px solid #4949ec;
+      background-color: $blue;
+      border: 1px solid $blue;
       border-radius: 40px;
       padding: 2px 10px;
       color: white;
       cursor: pointer;
     }
+  }
+
+  &__category-list{
+    display: flex;
   }
 
   //Content
