--- a/src/components/Button/button.scss
+++ b/src/components/Button/button.scss
@@ -3,6 +3,7 @@
 .button {
   display: flex;
   justify-content: center;
+  align-items: center;
   padding: 11px 25px;
   border-radius: 51px;
   color: #FFFFFF;
@@ -14,6 +15,7 @@
   //  transition: background-color 3s cubic-bezier(0.1, 0.8, 0.5, 2);
   //  background: #073193;
   //}
+
   &__img{
     width: 16px;
     height: 16px;
