--- a/src/components/Basket/basket.scss
+++ b/src/components/Basket/basket.scss
@@ -1,8 +1,8 @@
 @import '../../utils/variables';
 
-.basket--orders {
+.basket-orders {
   //fixme margin
-  margin-left: 60px;
+  //margin-left: 60px;
   border-radius: 20px;
   border: 1px solid $menu-blue;
   &__header {
