--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -7,3 +7,5 @@
 @import "./Goods/goods.scss";
 @import "./Button/CounterButton/counter_button.scss";
 @import "./Input/input.scss";
+@import "./Form/form.scss";
+@import "Delivery/delivery.scss";
