--- a/src/components/Goods/goods.scss
+++ b/src/components/Goods/goods.scss
@@ -4,7 +4,7 @@
 
   &__container{
     display: grid;
-    grid-template-columns: repeat(5, 1fr);
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 20px;
   }
 
