--- a/src/components/OrdersHistory/orders-history.scss
+++ b/src/components/OrdersHistory/orders-history.scss
@@ -9,7 +9,6 @@
   }
 
   &__item{
-    height: 236px;
     border: 1px solid $menu-blue;
     border-radius: 32px;
     padding: 20px;
@@ -22,6 +21,10 @@
   }
 
   &__main{
-    margin-top: 10px;
+    margin-top: 20px;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+    gap: 20px;
+
   }
 }
